--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
-DB_NAME=fitascacete -- Não mudar o nome da database.
-DB_HOST=localhost
-DB_USERNAME=root
-DB_PASSWORD=*****
+MYSQLHOST=*
+MYSQLDATABASE=railway
+MYSQLPASSWORD=dzerWKlKHLzRBJeGkykLSXvLWSegSgdE
+MYSQLUSER=root
+MYSQLPORT=42639
